# pyutils-collection

./: CHANGELOG.md  README.md  _version.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: lint-check.yml  publish-pypi.yml  security-check.yml  test-check.yml
pytest/unit/data_validation/schema_validation/: test_validate_cerberus_schema.py
pytest/unit/data_visualization_functions/chart_configuration/: test_apply_theme.py  test_chart_theme.py  test_configure_axes_style.py  test_get_preset_theme.py  test_reset_theme.py  test_set_figure_size.py
pytest/unit/data_visualization_functions/color_palettes/: test_adjust_brightness.py  test_create_gradient.py  test_generate_categorical_colors.py  test_generate_color_palette.py  test_get_colorblind_safe_palette.py  test_hex_to_rgb.py  test_rgb_to_hex.py
pytest/unit/data_visualization_functions/data_transformers/: test_aggregate_by_group.py  test_bin_data.py  test_calculate_moving_statistics.py  test_normalize_data.py  test_pivot_for_heatmap.py  test_smooth_timeseries.py
pytest/unit/data_visualization_functions/export_utilities/: test_configure_export_defaults.py  test_create_figure_grid.py  test_export_current_figure.py  test_save_figure.py  test_save_multiple_formats.py
pytest/unit/data_visualization_functions/plot_generation/: test_create_bar_plot.py  test_create_histogram.py  test_create_line_plot.py  test_create_scatter_plot.py
pytest/unit/decorators/: test_async_handle_error.py  test_async_wrapper.py  test_cache.py  test_cache_with_expiration.py  test_chain.py  test_conditional_execute.py  test_conditional_return.py  test_deprecated.py  test_enforce_types.py  test_handle_error.py  test_log_signature.py  test_rate_limit.py  test_redirect_output.py  test_retry.py  test_serialize_output.py  test_throttle.py  test_time_and_resource_function.py  test_time_function.py  test_timeout.py  test_validate_args.py
pytest/unit/env_config_functions/: test_expand_env_vars_in_string.py  test_get_env_var.py  test_load_dotenv.py  test_parse_ini_config.py  test_parse_toml_config.py  test_parse_yaml_config.py
pytest/unit/http_functions/: test_build_url.py  test_extract_domain.py  test_get_query_params.py  test_http_get.py  test_http_post.py  test_is_valid_url.py  test_parse_url.py
pytest/unit/json_functions/: test_safe_json_dump.py  test_safe_json_load.py
pytest/unit/logger_functions/: test_colored_formatter.py  test_contextual_logger.py  test_logger.py  test_performance_formatter.py  test_structured_formatter.py
pytest/unit/mathematical_functions/basic/: test_power.py
pytest/unit/mathematical_functions/random/: test_random_floats.py  test_random_integers.py  test_random_normal.py  test_random_sample.py
pytest/unit/multiprocessing_functions/: test_parallel_map.py  test_parallel_pipeline.py  test_parallel_progress_bar.py  test_parallel_sort.py  test_parallel_unique.py
pytest/unit/network_functions/: test_check_port_open.py  test_get_default_gateway.py  test_get_ipv6_addresses.py  test_get_local_ip.py  test_get_mac_address.py  test_get_network_interfaces.py  test_get_network_speed.py  test_get_public_ip.py  test_get_subnet_mask.py  test_is_internet_available.py  test_is_port_listening.py  test_multicast_receive.py  test_multicast_send.py  test_ping_host.py  test_resolve_hostname.py  test_scan_open_ports.py  test_traceroute_host.py
pytest/unit/playwright_functions/: test_extract_dynamic_content.py  test_managed_browser.py  test_parallel_scrape.py  test_restore_session.py  test_smart_screenshot.py
pytest/unit/regex_functions/: test_extract_emails.py  test_extract_urls.py  test_remove_extra_whitespace.py  test_remove_html_tags.py  test_sanitize_filename.py
pytest/unit/scientific_computing_functions/linear_algebra/: test_compute_svd.py  test_constrained_least_squares.py  test_solve_linear_system.py
pytest/unit/scientific_computing_functions/numerical_methods/: test_numerical_derivative.py  test_numerical_integration.py  test_solve_boundary_value_problem.py
pytest/unit/scientific_computing_functions/signal_processing/: test_adaptive_filter.py  test_apply_filter.py
pytest/unit/scientific_computing_functions/statistical_analysis/: test_robust_statistics.py
pytest/unit/testing_functions/benchmark_helpers/: test_benchmark_function.py
pyutils_collection/cli_functions/: get_cpu_info.py  get_memory_info.py
pyutils_collection/data_visualization_functions/chart_configuration/: apply_theme.py  configure_axes_style.py
pyutils_collection/data_visualization_functions/color_palettes/: create_gradient.py  generate_color_palette.py
pyutils_collection/data_visualization_functions/data_transformers/: aggregate_by_group.py  normalize_data.py  pivot_for_heatmap.py
pyutils_collection/data_visualization_functions/plot_generation/: create_bar_plot.py
pyutils_collection/database_functions/connection_management/: managed_db_connection.py
pyutils_collection/database_functions/schema_inspection/: analyze_column_cardinality.py  check_data_anomalies.py  compare_table_data.py  find_duplicate_indexes.py  get_foreign_key_dependencies.py  get_table_sizes.py  suggest_data_type_optimizations.py
pyutils_collection/datetime_functions/: convert_timezone.py
pyutils_collection/mathematical_functions/basic/: power.py
pyutils_collection/network_functions/: get_public_ip.py
pyutils_collection/playwright_functions/: extract_dynamic_content.py  restore_session.py
pyutils_collection/scientific_computing_functions/linear_algebra/: compute_svd.py  constrained_least_squares.py  solve_linear_system.py
pyutils_collection/scientific_computing_functions/numerical_methods/: numerical_derivative.py  numerical_integration.py  solve_boundary_value_problem.py
pyutils_collection/scientific_computing_functions/signal_processing/: apply_filter.py
pyutils_collection/scientific_computing_functions/statistical_analysis/: bootstrap_statistic.py
