[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils-collection"
dynamic = ["version"]
description = "Enterprise-grade Python utilities: 320+ type-safe, tested functions across 23 specialized modules for async operations, data processing, file handling, security, and more"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "MForofontov" }
]
keywords = [
    "utilities",
    "utils",
    "helpers",
    "asyncio",
    "database",
    "file-handling",
    "data-validation",
    "compression",
    "datetime",
    "decorators",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "cramjam==2.11.0",
    "python-snappy==0.7.3",
    "zstandard==0.23.0",
    "psutil==7.0.0",
    "tqdm==4.67.0",
    "numpy==2.3.0",
    "matplotlib==3.10.0",
    "aiohttp==3.12.0",
    "pytz==2024.2",
    "sqlalchemy==2.0.0",
    "toml==0.10.2",
    "pyyaml==6.0.2",
    "pydantic==2.11.0",
    "cerberus==1.3.7",
    "bcrypt==4.3.0",
    "cryptography==45.0.0",
    "PyJWT==2.10.0",
    "dnspython==2.8.0",
    "requests==2.32.0",
    "paramiko==3.5.0",
    "beautifulsoup4==4.14.0",
    "lxml==6.0.0",
    "openpyxl==3.1.0",
    "pyarrow==18.1.0",
    "scipy==1.17.0",
]

[project.urls]
Homepage = "https://github.com/MForofontov/pyutils-collection"
Repository = "https://github.com/MForofontov/pyutils-collection"
Issues = "https://github.com/MForofontov/pyutils-collection/issues"
Documentation = "https://github.com/MForofontov/pyutils-collection#readme"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==7.0.0",
    "allure-pytest==2.15.0",
    "allure-python-commons==2.15.0",
    "mypy==1.17.1",
    "ruff",            # <— add ruff here
    "pylint==3.3.7",   # optional; keep if you sometimes run it
    "attrs==25.3.0",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "tomli==2.2.1",
]
playwright = [
    "playwright>=1.40.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["pyutils_collection", "pyutils_collection.*"] } }

[tool.setuptools.dynamic]
version = {attr = "pyutils_collection._version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["pytest/unit", "pytest/performance"]
# optional, if you use asyncio tests
# asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
    "slow: marks tests as slow running tests (deselect with '-m \"not slow\"')",
    # Module-based markers for selective test execution
    "asyncio_functions: tests for asyncio utilities",
    "batch_processing: tests for batch processing functions",
    "cli_functions: tests for CLI and system utilities",
    "compression: tests for compression functions",
    "data_validation: tests for data validation functions",
    "data_visualization: tests for data visualization functions",
    "database: tests for database functions",
    "datetime: tests for datetime utilities",
    "decorators: tests for function decorators",
    "dev_utilities: tests for development utilities",
    "env_config: tests for environment configuration",
    "file_functions: tests for file operations",
    "formatting: tests for formatting functions",
    "http_functions: tests for HTTP utilities",
    "iterable_functions: tests for iterable operations",
    "json_functions: tests for JSON utilities",
    "logger_functions: tests for logging utilities",
    "machine_learning: tests for machine learning functions",
    "mathematical_functions: tests for mathematical operations",
    "multiprocessing_functions: tests for parallel processing",
    "network_functions: tests for network utilities",
    "regex: tests for regex functions",
    "scientific_computing: tests for scientific computing functions",
    "security: tests for security and cryptography functions",
    "serialization: tests for data serialization (parquet, excel, etc.)",
    "ssh_functions: tests for SSH operations",
    "strings_utility: tests for string manipulation",
    "testing: tests for testing utilities",
    "url_functions: tests for URL utilities",
    "web_scraping: tests for web scraping utilities",
]

[tool.ruff]
line-length = 88
target-version = "py310"  # match lowest supported Python
extend-exclude = ["venv", ".venv", "dist", "build", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID"]
ignore = [
  "E501",  # formatter handles long lines
]

[tool.ruff.lint.isort]
known-first-party = ["pyutils_collection"]

[tool.ruff.format]
# Ruff is the formatter

[tool.mypy]
python_version = "3.10"               # match lowest supported
strict = true
explicit_package_bases = true
ignore_missing_imports = true         # relax until stubs are added
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
cache_dir = ".mypy_cache"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/pytest/*",
    "*/pytest_run_tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.venv_new/*",
    "*/build/*",
    "*/dist/*",
    "*/.eggs/*",
    "*.egg-info/*",
    "find_missing_tests.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
